--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
   <title>Hello!</title>
 </head>
 <body>
-  <h1 style="color:purple;">Welcome to my website!!</h1>
+  <h1>Welcome to my website!!</h1>
   <h2>Hello my good friend</h2>
   Hello, world!
 </body>
