--- a/hello.html
+++ b/hello.html
@@ -31,7 +31,9 @@
               <a class="btn btn-outline" href="#projects">See projects</a>
             </p>
           </div>
-          <div class="hero-photo" aria-hidden="true"></div>
+          <div class="hero-photo">
+            <img src="mypic.jpg" alt="Pasc Mc" />
+          </div>
         </div>
       </section>
 
