--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="brand" href="#">Pasc Mc</a>
+        <a class="brand" href="#">Pasc Web-dev</a>
         <nav class="site-nav">
           <a href="#home">Home</a>
           <a href="#about">About</a>
